<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/filterMood"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="Mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filterReason"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:text="Reason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterMood" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/filterMood"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filterWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recent Week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterReason" />

    <EditText
        android:id="@+id/editReasonFilter"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/filterReason"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
