<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:iconTint="@drawable/icon_hover"
        android:title="Dashboard"/>
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/outline_map_24"
        android:iconTint="@drawable/icon_hover"
        android:title="Map"/>
    <item
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/outline_access_time_24"
        android:iconTint="@drawable/icon_hover"
        android:title="History"/>
    <item
        android:id="@+id/friendsHistoryFragment"
        android:enabled="true"
        android:icon="@drawable/outline_group_24"
        android:iconTint="@drawable/icon_hover"
        android:title="Following"/>
</menu>